initial file transfer

--- a/index.html
+++ b/index.html
@@ -2,19 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="https://media.licdn.com/dms/image/v2/C4D0BAQHjZCsIhpxVvw/company-logo_200_200/company-logo_200_200/0/1661151400486/rtae_ug_logo?e=2147483647&v=beta&t=ZR3sLDQnBkv_iK9VgEEhwAsk3FUt3eZVz7AjxyAsYtc"
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>warm-hello-way</title>
+    <title>Test Case Generator</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="warm-hello-way" />
+    <meta property="og:title" content="test-scribe-ai-suite" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
